welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:3: error: not found: value int
  return int(Math.sqrt(10))
         ^