welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = 
{
  return int(Math.sqrt(10))
}